--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="shared_with">Shared with</string>
 
     <string name="tap_prompt">Hold to sharer</string>
+
+    <string name="share_prompt">Tap to share\n%1$s</string>
 </resources>
