currently have authActivity as signup page and signInFragment as sign in, need to nav between those two

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="tap_prompt">Hold to sharer</string>
 
     <string name="share_prompt">Tap to share\n%1$s</string>
+    <string name="sign_in_anon">Sign in Anon</string>
+    <string name="sign_in">Sign In</string>
 </resources>
