--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="tap_prompt">Hold to sharer</string>
 
     <string name="share_prompt">Tap to share\n%1$s</string>
+
+    <string name="search_hint">Search filename</string>
+    <string name="search_title">Search results</string>
 </resources>
